<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="alert">Alert</string>
    <string name="settings">Settings</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="city">Paris</string>
    <string name="date">June 07</string>
    <string name="timeupdate">Time updated: %1$s</string>
    <string name="weather_icon">Weather icon</string>
    <string name="weatherMood">Clear</string>
    <string name="humadityValue">56%</string>
    <string name="temprature">%1$s°%2$s</string>
    <string name="humidity">HUMIDITY</string>
    <string name="windSpeed">%1$s %2$s</string>
    <string name="wind">WIND</string>
    <string name="feelLikeTemp">22 °C</string>
    <string name="feels_like">FEELS LIKE</string>
    <string name="minMaxTemp">%1$s - %2$s</string>
    <string name="stop">Stop</string>
    <string name="go_to_weather">Weather</string>
    <string name="check_weather">Check The Weather</string>
    <string name="alarm">Alarm</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="location_error">Please enable your location</string>
    <string name="gps">Gps</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="windspeed">WindSpeed</string>
    <string name="mps">Mps</string>
    <string name="mph">Mph</string>
    <string name="notification">notification</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>