<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherapp.view.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favFragment"
        android:name="com.example.weatherapp.view.favorite.FavFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_fav" >
        <action
            android:id="@+id/action_favFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_favFragment_to_detailsFragment2"
            app:destination="@id/detailsFragment2" />
    </fragment>
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.example.weatherapp.view.alert.AlertFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_alert" >
        <action
            android:id="@+id/action_alertFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weatherapp.view.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_alertFragment"
            app:destination="@id/alertFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.weatherapp.view.map.MapFragment"
        android:label="fragment_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_mapFragment_to_favFragment"
            app:destination="@id/favFragment" />
        <action
            android:id="@+id/action_mapFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <argument
            android:name="source"
            app:argType="string"
            android:defaultValue="favFragment"/>
    </fragment>
    <fragment
        android:id="@+id/detailsFragment2"
        android:name="com.example.weatherapp.view.favorite.DetailsFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_detailsFragment2_to_favFragment"
            app:destination="@id/favFragment" />
        <argument
            android:name="favWeather"
            app:argType="com.example.weatherapp.model.FavWeather" />
    </fragment>
</navigation>